--- a/public/style.css
+++ b/public/style.css
@@ -24,11 +24,25 @@ form div {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 80%;
-  height: 200px;
+  width: 60%;
   border-radius: 50%;
 }
 
+.img-single {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  border-radius: 50%;
+}
+
+.book {
+  margin-top: 20px;
+}
+
+.singleSH {
+  margin-top: 100px;
+}
 .navbar {
   height: 50px;
 }
